# bitburner-ts-template

./: .gitignore  Cargo.toml  INDEX.md  NetscriptDefinitions.d.ts  package-lock.json  package.json  tsconfig.json
cc/: CHANGELOG.md.save0  caesar.hs  cc.cabal  interval.hs  ip.hs  lpf.hs  lzip.hs  paren.hs  partsum.hs  pathsum.hs  rle.hs  spiralize.hs  subarraysum.hs  unique_paths.hs  vigenere.hs
cc/trader/: CHANGELOG.md  LICENSE  package.yaml  trader.cabal
cc/trader/app/: Main.hs
cc/trader/src/: Lib.hs
mcc/: graphcolor  graphcolor.m  gridpaths.m  interval.m  lz.m  parensan.m  spiralize.m  trader.m
rustcc/: Cargo.toml
src/: aug.helper.ts  aug.list-avail.ts  augs.ts  awdangit.ts  backdoor.ts  balance.ts  blade.skill.ts  blade.snapshot.ts  blade.travel.ts  blade.ts  bong.ts  bootstrap.ts  budget.ts  buy.ts  census.ts  controller.ts  custom-stats.ts  dispatch.ts  exploiter.ts  faction.ts  factoid.ts  fcc.ts  find_server.ts  findpath.ts  global.enums.ts  global.ts  goto.ts  graph.ts  greensleeves.ts  grow.ts  hack.ts  hackNet.ts  hackman.ts  harvest-lwt.ts  harvest.ts  hashnet.ts  helper.ts  jobber.ts  joblin.ts  kawaii.ts  (+29 more)
src/Batch/: batch.ts
src/coding_contracts/: arrayjump.ts  common.ts  encryption.ts  gridpaths.ts  imerge.ts  ipaddr.ts  lpf.ts  lz.ts  main.ts  pathsum.ts  subarraysum.ts  sumways.ts
src/util/: arraytools.ts  stringtools.ts
